added duo signup login routes and rendered views

--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -1,3 +1,6 @@
-<div class="card-footer">
-    <button id="new-post-btn" class="btn btn-primary">New Post <span class="fw-bold">+</span></button>
+<form action="/posting" method="get">
+  <div class="card-footer">
+    <button type="submit" id="new-post-btn" class="btn btn-primary">New Post
+      <span class="fw-bold">+</span></button>
   </div>
+</form>
