--- a/views/postview.hbs
+++ b/views/postview.hbs
@@ -1,3 +1,4 @@
+
 <div>
   <h1>
     <span class="text-primary code">res.ok</span>
@@ -8,12 +9,6 @@
     <span class="text-info code">;</span>
   </h1>
   <hr class="my-4" />
-  <h2>{{dashboard.name}}</h2>
-  <p class="lead">{{display.message}}<span class="text-warning code">{{user.name}}</span>!</p>
-  <br>
-  {{#if posting}}
-    {{> formpost}}
-    {{else}}
-    {{> post}}
-    {{/if}}
+  <p>Check out our latest articles:</p>
+  {{> postview}}
 </div>
