--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -19,48 +19,16 @@
     <title>Techy Time Blog</title>
   </head>
 
-  <body class="vs-dark-bg text-light">
-    <nav class="navbar navbar-expand-lg navbar-dark vs-dark-bg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <span class="text-primary code">Techy</span>
-          <span class="text-success">Time</span>
-          <span class="text-warning code">Blog</span>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/dashboard">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/signup">SignUp</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+  <body id="logged" class="vs-dark-bg text-light">
+    {{#if logged}}
+    {{> loggednav}}
+    {{else}}
+    {{> loggoutnav}}
+    {{/if}}
     <div class="container my-5">
       {{{body}}}
     </div>
-    {{! <script src="js/script.js"></script> }}
+    {{!-- {{! <script src="js/script.js"></script> }} --}}
 
   </body>
 
