--- a/views/signlog.hbs
+++ b/views/signlog.hbs
@@ -8,12 +8,6 @@
     <span class="text-info code">;</span>
   </h1>
   <hr class="my-4" />
-  <h2>{{dashboard.name}}</h2>
-  <p class="lead">{{display.message}}<span class="text-warning code">{{user.name}}</span>!</p>
-  <br>
-  {{#if posting}}
-    {{> formpost}}
-    {{else}}
-    {{> post}}
-    {{/if}}
+  <h2>Login or SignUp</h2>
+  {{> signlog}}
 </div>
