--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -8,6 +8,6 @@
     <span class="text-info code">;</span>
   </h1>
   <hr class="my-4" />
-  <h2>Dashboard</h2>
+  <h2>SignUp</h2>
   {{> signup}}
 </div>
