--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,35 +1,41 @@
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    crossorigin="anonymous"
+  />
 
-    <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-      crossorigin="anonymous"
-    ></script>
-    <title>Techy Time Blog</title>
-  </head>
+  <!-- Add the Bootstrap Icons CSS file link -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    rel="stylesheet"
+  />
 
-  <body id="logged" class="vs-dark-bg text-light">
-    {{#if logged}}
-    {{> loggednav}}
-    {{else}}
-    {{> loggoutnav}}
-    {{/if}}
-    <div class="container my-5">
-      {{{body}}}
-    </div>
-    {{!-- {{! <script src="js/script.js"></script> }} --}}
+  <link rel="stylesheet" href="css/style.css" />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"
+  ></script>
+  <title>Techy Time Blog</title>
+</head>
 
-  </body>
+<body id="logged" class="vs-dark-bg text-light">
+  {{#if logged}}
+  {{> loggednav}}
+  {{else}}
+  {{> loggoutnav}}
+  {{/if}}
+  <div class="container my-5">
+    {{{body}}}
+  </div>
+  <!-- {{! <script src="js/script.js"></script> }} -->
+
+</body>
 
 </html>
