--- a/views/partials/postedit.hbs
+++ b/views/partials/postedit.hbs
@@ -1,11 +1,11 @@
 <div class="card mb-3">
   <div class="card-header bg-primary text-white">
-    <h3 id="new-post-header">New Post</h3>
+    <h3 id="new-post-header">Edit Post</h3>
   </div>
   <div class="card-body">
-    <form id="new-post-form" action="/api/create" method="post">
+    <form id="editform" action="/api/create" method="put">
       <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
+        <label for="title" class="form-label">{{post.title}}</label>
         <input
           type="text"
           class="form-control"
@@ -15,7 +15,7 @@
         />
       </div>
       <div class="mb-3">
-        <label for="content" class="form-label">Content</label>
+        <label for="content" class="form-label">{{post.content}}</label>
         <textarea
           class="form-control"
           id="content"
@@ -25,10 +25,10 @@
         ></textarea>
       </div>
       <div class="text-center">
-        <button type="submit" class="btn btn-primary">Post</button>
+        <button type="submit" class="btn btn-primary">Finish Editing</button>
         <button id="cancel-post" class="btn btn-secondary">Cancel</button>
       </div>
     </form>
   </div>
 </div>
-<script src="js/script.js"></script>
+<script type="module" src="js/update.js"></script>
